--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Maven
-/*/target/
+/target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -14,5 +14,6 @@ release.properties
 /*/.classpath
 /*/.project
 /.settings/
+/.classpath
 /.project
 /bin/
