--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,22 @@
+sudo: false
+
+env:
+  - JACOCO_VERSION=0.7.4.201502262128
+  - GITHUB_USER=cyChop
+  - GITHUB_REPO=maths-java
+
 language: java
 
 jdk:
-#  - openjdk6
   - oraclejdk8
 
+before_script:
+  - "mvn clean install"
+
+script
+  - "mvn org.jacoco:jacoco-maven-plugin:$JACOCO_VERSION:prepare-agent install"
+
 after_success:
-  - mvn cobertura:cobertura coveralls:report
+  - "mvn org.jacoco:jacoco-maven-plugin:$JACOCO_VERSION:report org.eluder.coveralls:coveralls-maven-plugin:report"
+  - "[[ $TRAVIS_REPO_SLUG == $GITHUB_USER/$GITHUB_REPO ]] && [[ $TRAVIS_BRANCH == quality ]] && mvn sonar:sonar"
+  
