--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <name>Math algorithms</name>
     <description>Just some algorithms</description>
+    <url>https://github.com/${github.user}/${github.repo}</url>
 
     <licenses>
         <license>
@@ -29,16 +30,17 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <!-- Propagate Java version to Sonar -->
-        <sonar.java.source>${maven.compiler.source}</sonar.java.source>
-        <sonar.java.target>${maven.compiler.target}</sonar.java.target>
-
         <!-- Version management - test -->
         <junit.version>4.12</junit.version>
         <jdepend.version>2.9.1</jdepend.version>
-        <!-- Version management - coverage -->
-        <cobertura.plugin.version>2.7</cobertura.plugin.version>
-        <coveralls.plugin.version>4.0.0</coveralls.plugin.version>
+
+        <!-- Sonar -->
+        <sonar.java.source>${maven.compiler.source}</sonar.java.source>
+        <sonar.java.target>${maven.compiler.target}</sonar.java.target>
+        <sonar.host.url>http://sonar.keyboardplaying.org</sonar.host.url>
+        <sonar.jdbc.url>jdbc:mysql://sonar.keyboardplaying.org:3306/sonar</sonar.jdbc.url>
+        <sonar.jdbc.username>sonar</sonar.jdbc.username>
+        <sonar.jdbc.password>sonar</sonar.jdbc.password>
     </properties>
 
     <dependencies>
@@ -62,22 +64,6 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <!--<![CDATA[
-                  ___                      _ _
-                 / __|_____ _____ _ _ __ _| | |___
-                | (__/ _ \ V / -_) '_/ _` | | (_-<
-                 \___\___/\_/\___|_| \__,_|_|_/__/ ]]>-->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.eluder.coveralls</groupId>
-                <artifactId>coveralls-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-
         <pluginManagement>
             <plugins>
                 <!--<![CDATA[
@@ -102,26 +88,6 @@
                             </manifestEntries>
                         </archive>
                     </configuration>
-                </plugin>
-
-                <!--<![CDATA[
-                      ___                      _ _
-                     / __|_____ _____ _ _ __ _| | |___
-                    | (__/ _ \ V / -_) '_/ _` | | (_-<
-                     \___\___/\_/\___|_| \__,_|_|_/__/ ]]>-->
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>cobertura-maven-plugin</artifactId>
-                    <version>${cobertura.plugin.version}</version>
-                    <configuration>
-                        <format>xml</format>
-                        <maxmem>256m</maxmem>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.eluder.coveralls</groupId>
-                    <artifactId>coveralls-maven-plugin</artifactId>
-                    <version>${coveralls.plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -163,6 +129,10 @@
         <system>GitHub</system>
         <url>https://github.com/${github.user}/${github.repo}/issues</url>
     </issueManagement>
+    <ciManagement>
+        <system>Travis CI</system>
+        <url>https://travis-ci.org/${github.user}/${github.repo}</url>
+    </ciManagement>
     <organization>
         <name>Keyboard Playing</name>
         <url>http://keyboardplaying.org</url>
