--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
+language: java
+
 sudo: false
 
 env:
   - JACOCO_VERSION=0.7.4.201502262128
-
-language: java
 
 jdk:
   - oraclejdk8
@@ -15,6 +15,7 @@ script
   - "mvn org.jacoco:jacoco-maven-plugin:$JACOCO_VERSION:prepare-agent install"
 
 after_success:
-  - "mvn org.jacoco:jacoco-maven-plugin:$JACOCO_VERSION:report org.eluder.coveralls:coveralls-maven-plugin:report"
+# Old configuration for Coveralls
+# - "mvn org.jacoco:jacoco-maven-plugin:$JACOCO_VERSION:report org.eluder.coveralls:coveralls-maven-plugin:report"
   - "[[ $TRAVIS_PULL_REQUEST == false ]] && [[ $TRAVIS_BRANCH == quality ]] && mvn sonar:sonar"
   
