--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,10 @@ jdk:
   - oraclejdk7
 
 before_script:
-  - "mvn clean install"
+  - "mvn clean install -Dmaven.test.skip=true"
 
 script
   - "mvn org.jacoco:jacoco-maven-plugin:$JACOCO_VERSION:prepare-agent install"
 
 after_success:
   - "[[ $TRAVIS_PULL_REQUEST == false ]] && [[ $TRAVIS_BRANCH == quality ]] && mvn sonar:sonar"
-  
